# backend

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
authentication/: authentication.py  models.py  serializers.py  urls.py  views.py
authentication/migrations/: 0001_initial.py
backend/: settings.py  urls.py  wsgi.py
news/: urls.py  views.py
translation/: apps.py  models.py  serializers.py  urls.py  views.py
translation/migrations/: 0001_initial.py
translation/vocabs/: english_vocab_en.pth  newari_vocab_en.pth
tts/: apps.py  models.py  serializers.py  urls.py  views.py
tts/migrations/: 0001_initial.py
utils/: preprocess.py  transformer.py  utils.py
